syntax = "proto3";

package envoy.extensions.filters.http.ext_proc.v3;

// External Processing Filter Processing Mode
// This configuration describes which parts of an HTTP request and
// response are sent to a remote server and how they are delivered.

// [#next-free-field: 7]
message ProcessingMode {
  // Control how headers and trailers are handled
  enum HeaderSendMode {
    // Default behavior depends on the part being processed.
    DEFAULT = 0;
    // Send the header or trailer.
    SEND = 1;
    // Do not send the header or trailer.
    SKIP = 2;
  }

  // Control how the request and response bodies are handled
  enum BodySendMode {
    // Do not send the body at all. This is the default.
    NONE = 0;

    // Stream the body to the server in pieces as they are seen.
    STREAMED = 1;

    // Buffer the message body in memory and send the entire body at once.
    // If the body exceeds the configured buffer limit, then the
    // downstream system will receive an error.
    BUFFERED = 2;

    // Buffer the message body in memory and send the entire body in one
    // chunk. If the body exceeds the configured buffer limit, then the body contents
    // up to the buffer limit will be sent.
    BUFFERED_PARTIAL = 3;

    // Full duplex streaming mode: client streams body to server and server streams back responses.
    FULL_DUPLEX_STREAMED = 4;
  }

  // How to handle the request header. Default is "SEND".
  // Note this field is ignored in mode_override, since mode overrides can only affect messages
  // exchanged after the request header is processed.
  HeaderSendMode request_header_mode = 1;

  // How to handle the response header. Default is "SEND".
  HeaderSendMode response_header_mode = 2;

  // How to handle the request body. Default is "NONE".
  BodySendMode request_body_mode = 3;

  // How to handle the response body. Default is "NONE".
  BodySendMode response_body_mode = 4;

  // How to handle the request trailers. Default is "SKIP".
  HeaderSendMode request_trailer_mode = 5;

  // How to handle the response trailers. Default is "SKIP".
  HeaderSendMode response_trailer_mode = 6;
}
